Remove minus margin from heroimage to prevent top from going off screen

--- a/src/components/AaJumbotron/AaJumbotron.scss
+++ b/src/components/AaJumbotron/AaJumbotron.scss
@@ -44,7 +44,7 @@
 }
 
 .heroimage.tophero {
-    margin-top: -115px;
+    // margin-top: -115px;
     h1 {
         font-size: 4em;
         @media (min-width: 768px) {
